Fix synchronization of visibility button between image viewer & additional layers view

--- a/app/css/imageViewer.css
+++ b/app/css/imageViewer.css
@@ -49,7 +49,7 @@
   list-style: none;
   border-radius: 10px;
   text-overflow: ellipsis;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 /*** Layer items ***/
@@ -117,6 +117,7 @@
 .image
 {
 	position: relative;
+	margin-bottom: 3px;
 }
 
 /*** Progress bar ***/
